--- a/catalog-item.html
+++ b/catalog-item.html
@@ -49,7 +49,7 @@
             <a href="#">Средства для ухода</a>
           </li>
           <li class="breadcrumbs-item">
-            <a href="#" class="breadcrumbs-active">Набор для путешествий "Baxter of California"</a>
+            <span class="breadcrumbs-active">Набор для путешествий "Baxter of California"</span>
           </li>
         </ul>
       </nav>
@@ -68,9 +68,7 @@
           <div class="info">
             <b class="available">Есть в наличии</b>
             <b class="code">Артикул:Dexter-AE</b>
-            <div class="description">
-              <p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что необходимо для бритья и ухода за кожей во время рабочей поездки или отдыха:средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-            </div>
+            <p class="description">Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что необходимо для бритья и ухода за кожей во время рабочей поездки или отдыха:средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
             <span class="price">2900 руб.</span>
             <a href="#" class="btn">Купить</a>
           </div>
