--- a/catalog.html
+++ b/catalog.html
@@ -44,8 +44,7 @@
           <li class="breadcrumbs-item">
             <a href="#">Магазин</a>
           </li>  
-          <li class="breadcrumbs-item">
-            <a href="#" class="breadcrumbs-active">Средства для ухода</a>
+          <li class="breadcrumbs-item breadcrumbs-active">Средства для ухода
           </li>
         </ul>
       </nav>
@@ -55,26 +54,26 @@
             <div class="producers">
               <h2 class="producers-title">Производители</h2>
               <input type="checkbox" id="baxter-of-california" checked>
-              <label for="baxter-of-california">Baxter of California</label><br>
+              <label for="baxter-of-california">Baxter of California</label>
               <input type="checkbox" id="mr-natty">
-              <label for="">Mr Natty</label><br>
+              <label for="">Mr Natty</label>
               <input type="checkbox" id="suavecito" checked>
-              <label for="">Suavecito</label><br>
+              <label for="">Suavecito</label>
               <input type="checkbox" id="malin-goetz">
-              <label for="">Malin+Goetz</label><br>
+              <label for="">Malin+Goetz</label>
               <input type="checkbox" id="murrays">
-              <label for="">Murray's</label><br>
+              <label for="">Murray's</label>
               <input type="checkbox" id="american-crew" checked>
               <label for="">American Crew</label>
             </div>
             <div class="products">
               <h2 class="products-title">Продукты</h2>
               <input type="radio" id="">
-              <label for="">Бритвенные принадлежности</label><br>
+              <label for="">Бритвенные принадлежности</label>
               <input type="radio" id="" checked>
-              <label for="">Средства для ухода</label><br>
+              <label for="">Средства для ухода</label>
               <input type="radio" id="">
-              <label for="">Аксессуары</label><br>      
+              <label for="">Аксессуары</label>  
             </div>
             <button class="btn" type="submit">Показать</button> 
           </form>
@@ -82,73 +81,71 @@
         <div class="products-list">
           <div class="block-1">
             <article class="product-list-item">
-              <figure class="">
+              <a href="catalog-item.html">
                 <img src="img/#" width="" height="" alt="">
-                <figcaption>Набор для путешествий<br>
-                "Baxter of California"
-                </figcaption>
-              </figure>
+              </a>
+              <a href="catalog-item.html">Набор для путешествий "Baxter of California"</a>
               <span class="price">2900 руб.</span>
               <a href="#" class="btn">Купить</a>
             </article>
             <article class="product-list-item">
-              <figure class="">
+              <a href="#" class="">
                 <img src="img/#" width="" height="" alt="">
-                <figcaption>Увлажняющий кондиционер<br>
-                "Baxter of California"
-                </figcaption>
-              </figure>
+              </a>
+              <a href="#">Увлажняющий кондиционер "Baxter of California"</a>
               <span class="price">750 руб.</span>
               <a href="#" class="btn">Купить</a>
             </article>
             <article class="product-list-item">
-              <figure class="">
+              <a href="#">
                 <img src="img/#" width="" height="" alt="">
-                <figcaption>Гель для волос<br>
-                "Suavetico"
-                </figcaption>
-              </figure>
+              </a>
+              <a href="#">Гель для волос "Suavetico"</a>
               <span class="price">290 руб</span>
               <a href="#" class="btn">Купить</a>
             </article>
           </div>
           <div class="block-2">
             <article class="product-list-item">
-              <figure class="">
+              <a href="#">
                 <img src="img/#" width="" height="" alt="">
-                <figcaption>Глина для укладки волос<br>
-                "American Crew"
-                </figcaption>
-              </figure>
+              </a>
+              <a href="#">Глина для укладки волос "American Crew"</a>
               <span class="price">500 руб.</span>
               <a href="#" class="btn">Купить</a>
             </article>
             <article class="product-list-item">
-              <figure class="">
+              <a href="#">
                 <img src="img/#" width="" height="" alt="">
-                <figcaption>Гель для волос<br>
-                "American Crew"
-                </figcaption>
-              </figure>
+              </a>
+              <a>Гель для волос "American Crew"</a>              
               <span class="price">300 руб.</span>
               <a href="#" class="btn">Купить</a>
             </article>
             <article class="product-list-item">
-              <figure class="">
+              <a href="#">
                 <img src="img/#" width="" height="" alt="">
-                <figcaption>Набор для бритья<br>
-                "Baxter of California"
-                </figcaption>
-              </figure>
+              </a>
+              <a>Набор для бритья "Baxter of California"</a>
               <span class="price">3900 руб</span>
               <a href="#" class="btn">Купить</a>
             </article>
           </div>
           <div class="paginator">
-            <a href="#" class="paginator-btn">1</a>
-            <a href="#" class="paginator-btn paginator-ative">2</a>
-            <a href="#" class="paginator-btn">3</a>
-            <a href="#" class="paginator-btn">4</a>
+            <ul>
+              <li>
+                <a href="#" class="paginator-btn">1</a>
+              </li>
+              <li>
+                <a href="#" class="paginator-btn paginator-ative">2</a>
+              </li>
+              <li>
+                <a href="#" class="paginator-btn">3</a>
+              </li>
+              <li>
+                <a href="#" class="paginator-btn">4</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>    
