--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»: Набор для путешествий "Baxter of California"</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header class="main-header">
@@ -23,7 +24,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="#" class="main-navigation-active">Магазин</a>
+              <a class="main-navigation-active">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -49,19 +50,19 @@
             <a href="#">Средства для ухода</a>
           </li>
           <li class="breadcrumbs-item">
-            <span class="breadcrumbs-active">Набор для путешествий "Baxter of California"</span>
+            <a class="breadcrumbs-active">Набор для путешествий "Baxter of California"</a>
           </li>
         </ul>
       </nav>
       <div class="catalog-item-content">
         <div class="content-left">
           <figure>
-            <img src="img/#">
+            <img src="img/item-large.jpg" width="460" height="498" alt="item-large.jpg">
           </figure>
           <div class="img-mini">
-            <a href="#"><img src="img/#" class=""></a>
-            <a href="#"><img src="img/#" class=""></a>
-            <a href=""><img src="img/#" class=""></a>
+            <a href="#"><img src="img/item-small1.jpg" width="140" height="149" alt="item-small1.jpg"></a>
+            <a href="#"><img src="img/item-small2.jpg" width="140" height="149" alt="item-small2.jpg"></a>
+            <a href="#"><img src="img/item-small3.jpg" width="140" height="149" alt="item-small3.jpg"></a>
           </div>
         </div>
         <div class="content-right">
