--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h2 class="index-content-title">Фотогалерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/photo-1.jpg">  
+              <img src="img/index-img.jpg" width="286" height="164" alt="index-img.jpg">  
             </figure>
             <button class="btn gallery-prev" type="button">Назад</button>
             <button class="btn gallery-next" type="button">Вперёд</button>
