--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header class="main-header">
@@ -22,7 +23,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="#" class="main-navigation-active">Магазин</a>
+              <a class="main-navigation-active">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -44,7 +45,8 @@
           <li class="breadcrumbs-item">
             <a href="#">Магазин</a>
           </li>  
-          <li class="breadcrumbs-item breadcrumbs-active">Средства для ухода
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-active">Средства для ухода</a>
           </li>
         </ul>
       </nav>
@@ -82,7 +84,7 @@
           <div class="block-1">
             <article class="product-list-item">
               <a href="catalog-item.html">
-                <img src="img/#" width="" height="" alt="">
+                <img src="img/item-1.jpg" width="220" height="165" alt="item1.jpg">
               </a>
               <a href="catalog-item.html">Набор для путешествий "Baxter of California"</a>
               <span class="price">2900 руб.</span>
@@ -90,7 +92,7 @@
             </article>
             <article class="product-list-item">
               <a href="#" class="">
-                <img src="img/#" width="" height="" alt="">
+                <img src="img/item-2.jpg" width="220" height="165" alt="item2.jpg">
               </a>
               <a href="#">Увлажняющий кондиционер "Baxter of California"</a>
               <span class="price">750 руб.</span>
@@ -98,7 +100,7 @@
             </article>
             <article class="product-list-item">
               <a href="#">
-                <img src="img/#" width="" height="" alt="">
+                <img src="img/item-3.jpg" width="220" height="165" alt="item3.jpg">
               </a>
               <a href="#">Гель для волос "Suavetico"</a>
               <span class="price">290 руб</span>
@@ -108,7 +110,7 @@
           <div class="block-2">
             <article class="product-list-item">
               <a href="#">
-                <img src="img/#" width="" height="" alt="">
+                <img src="img/item-4.jpg" width="220" height="165" alt="item4.jpg">
               </a>
               <a href="#">Глина для укладки волос "American Crew"</a>
               <span class="price">500 руб.</span>
@@ -116,17 +118,17 @@
             </article>
             <article class="product-list-item">
               <a href="#">
-                <img src="img/#" width="" height="" alt="">
+                <img src="img/item-5.jpg" width="220" height="165" alt="item5.jpg">
               </a>
-              <a>Гель для волос "American Crew"</a>              
+              <a href="#">Гель для волос "American Crew"</a>              
               <span class="price">300 руб.</span>
               <a href="#" class="btn">Купить</a>
             </article>
             <article class="product-list-item">
               <a href="#">
-                <img src="img/#" width="" height="" alt="">
+                <img src="img/item-6.jpg" width="220" height="165" alt="item6.jpg">
               </a>
-              <a>Набор для бритья "Baxter of California"</a>
+              <a href="#">Набор для бритья "Baxter of California"</a>
               <span class="price">3900 руб</span>
               <a href="#" class="btn">Купить</a>
             </article>
