--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main class="container">
       <div class="index-logo">
-        <img src="img/index-logo.png" alt="Logo">
+        <img src="img/index-logo.png" width="368" height="204" alt="Logo">
       </div>
       <section class="features clearfix">
         <div class="features-item">
